--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -24,7 +24,7 @@
             <TextBlock  Background="Transparent"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center"
-                        FontSize="20"
+                        FontSize="25"
                         Padding="30,0"
                         Text="Настройки"/>
         </Grid>
@@ -47,11 +47,11 @@
                                 <RowDefinition Height="*"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            
+
                             <TextBlock Grid.Row="0"
                                        FontSize="20"
                                        Text="Программа"/>
-                            
+
                             <Grid Grid.Row="1">
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*"/>
@@ -95,7 +95,7 @@
                                                 <TextBox Grid.Column="1"
                                                          MaxLength="9"
                                                          FontSize="15"
-                                                         Text="{Binding Path=BackgroundColor}"
+                                                         Text="{Binding Path=BackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
 
@@ -116,7 +116,7 @@
                                                 <TextBox Grid.Column="1"
                                                          MaxLength="9"
                                                          FontSize="15"
-                                                         Text="{Binding Path=FontColor}"
+                                                         Text="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
 
@@ -137,7 +137,7 @@
                                                 <TextBox Grid.Column="1"
                                                          MaxLength="9"
                                                          FontSize="15"
-                                                         Text="{Binding Path=PageColor}"
+                                                         Text="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                          HorizontalContentAlignment="Center"/>
                                             </Grid>
                                         </Grid>
@@ -161,30 +161,9 @@
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="*"/>
                                                 <RowDefinition Height="*"/>
-                                                <RowDefinition Height="*"/>
                                             </Grid.RowDefinitions>
 
                                             <Grid Grid.Row="0"
-                                                  Margin="0,10,0,0">
-                                                <Grid.ColumnDefinitions>
-                                                    <ColumnDefinition Width="auto"/>
-                                                    <ColumnDefinition Width="auto"/>
-                                                </Grid.ColumnDefinitions>
-
-                                                <TextBlock Grid.Column="0"
-                                                           FontSize="15"
-                                                           Margin="0,0,15,0"
-                                                           VerticalAlignment="Bottom"
-                                                           HorizontalAlignment="Center"
-                                                           Text="Голос:"/>
-
-                                                <ComboBox Grid.Column="1"
-                                                          FontSize="15"
-                                                          ItemsSource="{Binding Path=BackgroundColor}"
-                                                          HorizontalContentAlignment="Center"/>
-                                            </Grid>
-
-                                            <Grid Grid.Row="1"
                                                   Margin="0,10">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto"/>
@@ -200,15 +179,15 @@
 
                                                 <ComboBox Grid.Column="1"
                                                           FontSize="15"
-                                                          ItemsSource="{Binding Path=BackgroundColor}"
+                                                          ItemsSource="{Binding Path=Speed,UpdateSourceTrigger=PropertyChanged}"
                                                           HorizontalContentAlignment="Center"/>
                                             </Grid>
 
-                                            <Grid Grid.Row="2"
+                                            <Grid Grid.Row="1"
                                                   Margin="0,10">
                                                 <Grid.ColumnDefinitions>
                                                     <ColumnDefinition Width="auto"/>
-                                                    <ColumnDefinition Width="100"/>
+                                                    <ColumnDefinition Width="auto"/>
                                                 </Grid.ColumnDefinitions>
 
                                                 <TextBlock Grid.Column="0"
@@ -220,7 +199,7 @@
 
                                                 <CheckBox Grid.Column="1"
                                                           FontSize="15"
-                                                          IsChecked="{Binding Path=IsSay}"
+                                                          IsChecked="{Binding Path=IsSay,UpdateSourceTrigger=PropertyChanged}"
                                                           HorizontalContentAlignment="Center"/>
                                             </Grid>
                                         </Grid>
@@ -238,10 +217,145 @@
                         <Grid Margin="15,10">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="*"/>
+                                <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
                             <TextBlock Grid.Row="0"
-                                       FontSize="15"
+                                       FontSize="20"
                                        Text="Администрирование"/>
+
+                            <Grid Grid.Row="1">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <Grid Grid.Row="0"
+                                      Margin="0,10">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="*"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Grid.Column="0"
+                                                   Margin="10,18"
+                                                   FontSize="15"
+                                                   Text="Администратор:"/>
+
+                                        <Grid Grid.Column="1">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
+                                                <RowDefinition Height="*"/>
+                                            </Grid.RowDefinitions>
+
+                                            <Grid Grid.Row="0"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Имя / Логин:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         MaxLength="9"
+                                                         FontSize="15"
+                                                         Text="{Binding Path=BackgroundColor}"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="1"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Пароль:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         MaxLength="9"
+                                                         FontSize="15"
+                                                         Text="{Binding Path=FontColor}"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+
+                                            <Grid Grid.Row="2"
+                                                  Margin="0,10">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="100"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Bottom"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Пол:"/>
+
+                                                <ComboBox Grid.Column="1"
+                                                          FontSize="15"
+                                                          Text="{Binding Path=PageColor}"
+                                                          HorizontalContentAlignment="Center"/>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+
+                                <Grid Grid.Row="1"
+                                      Margin="0,10">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Grid.Column="0"
+                                                   Margin="10,18"
+                                                   FontSize="15"
+                                                   Text="Данные:"/>
+
+                                        <Grid Grid.Column="1">
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="*"/>
+                                            </Grid.RowDefinitions>
+
+                                            <Grid Grid.Row="0"
+                                                  Margin="0,0">
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="auto"/>
+                                                    <ColumnDefinition Width="300"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <TextBlock Grid.Column="0"
+                                                           FontSize="15"
+                                                           Margin="0,0,15,0"
+                                                           VerticalAlignment="Center"
+                                                           HorizontalAlignment="Center"
+                                                           Text="Путь для хранения данных:"/>
+
+                                                <TextBox Grid.Column="1"
+                                                         FontSize="15"
+                                                         Text="{Binding Path}"
+                                                         VerticalAlignment="Center"
+                                                         HorizontalContentAlignment="Center"/>
+                                            </Grid>
+                                        </Grid>
+                                    </Grid>
+                                </Grid>
+                            </Grid>
                         </Grid>
                     </Border>
                 </Grid>
