--- a/Marlin/Views/Main/SettingsPage.xaml
+++ b/Marlin/Views/Main/SettingsPage.xaml
@@ -6,7 +6,7 @@
       xmlns:vm="clr-namespace:Marlin.ViewModels.Main"
       xmlns:local="clr-namespace:Marlin.Views.Main"
       mc:Ignorable="d" 
-      d:Height="1450" 
+      d:Height="450" 
       d:Width="800"
       ShowsNavigationUI="False"
       Foreground="{Binding Path=FontColor}"
@@ -81,7 +81,7 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10,13"
+                                                   Margin="10,15"
                                                    FontSize="15"
                                                    FontWeight="Bold"
                                                    Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
@@ -117,19 +117,13 @@
                                                             VerticalAlignment="Center"
                                                             Content="Цвет внешнего фона"/>
 
-                                                    <Grid Grid.Column="1">
-                                                        <Grid.ColumnDefinitions>
-                                                            <ColumnDefinition Width="100"/>
-                                                            <ColumnDefinition Width="300"/>
-                                                        </Grid.ColumnDefinitions>
-
-                                                        <TextBox Grid.Column="0"
-                                                                 Margin="0,0,15,0"
+                                                    <TextBox Grid.Column="1"
                                                                  MaxLength="7"
+                                                             Padding="10,0"
+                                                             VerticalContentAlignment="Center"
                                                                  FontSize="15"
                                                                  Text="{Binding Path=ExternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                                                                  HorizontalContentAlignment="Center"/>
-                                                    </Grid>
                                                 </Grid>
 
                                                 <Grid Grid.Row="1"
@@ -140,8 +134,8 @@
                                                     </Grid.ColumnDefinitions>
 
                                                     <Button Grid.Column="0"
-                                                           FontSize="15"
-                                                           Margin="0,0,15,0"
+                                                            FontSize="15"
+                                                            Margin="0,0,15,0"
                                                             HorizontalContentAlignment="Center"
                                                            VerticalAlignment="Center"
                                                             Command="{Binding Path=SelectColorCommand}"
@@ -152,19 +146,13 @@
                                                             Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                            Content="Цвет внутреннего фона"/>
 
-                                                    <Grid Grid.Column="1">
-                                                        <Grid.ColumnDefinitions>
-                                                            <ColumnDefinition Width="100"/>
-                                                            <ColumnDefinition Width="300"/>
-                                                        </Grid.ColumnDefinitions>
-
-                                                        <TextBox Grid.Column="0"
-                                                                 Margin="0,0,15,0"
+                                                    <TextBox Grid.Column="1"
                                                                  MaxLength="7"
+                                                             Padding="10,0"
+                                                             VerticalContentAlignment="Center"
                                                                  FontSize="15"
                                                                  Text="{Binding Path=InternalBackgroundColor,UpdateSourceTrigger=PropertyChanged}"
                                                                  HorizontalContentAlignment="Center"/>
-                                                    </Grid>
                                                     
                                                 </Grid>
 
@@ -187,19 +175,13 @@
                                                             Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                            Content="Цвет текста"/>
 
-                                                    <Grid Grid.Column="1">
-                                                        <Grid.ColumnDefinitions>
-                                                            <ColumnDefinition Width="100"/>
-                                                            <ColumnDefinition Width="300"/>
-                                                        </Grid.ColumnDefinitions>
-
-                                                        <TextBox Grid.Column="0"
-                                                                 Margin="0,0,15,0"
+                                                    <TextBox Grid.Column="1"
                                                                  MaxLength="7"
+                                                             Padding="10,0"
+                                                             VerticalContentAlignment="Center"
                                                                  FontSize="15"
                                                                  Text="{Binding Path=FontColor,UpdateSourceTrigger=PropertyChanged}"
                                                                  HorizontalContentAlignment="Center"/>
-                                                    </Grid>
                                                 </Grid>
 
                                                 <Grid Grid.Row="3"
@@ -221,19 +203,13 @@
                                                             Background="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                            Content="Цвет объектов"/>
 
-                                                    <Grid Grid.Column="1">
-                                                        <Grid.ColumnDefinitions>
-                                                            <ColumnDefinition Width="100"/>
-                                                            <ColumnDefinition Width="300"/>
-                                                        </Grid.ColumnDefinitions>
-
-                                                        <TextBox Grid.Column="0"
-                                                                 Margin="0,0,15,0"
+                                                    <TextBox Grid.Column="1"
                                                                  MaxLength="7"
-                                                                 FontSize="15"
+                                                             Padding="10,0"
+                                                             VerticalContentAlignment="Center"
+                                                             FontSize="15"
                                                                  Text="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
                                                                  HorizontalContentAlignment="Center"/>
-                                                    </Grid>
                                                 </Grid>
 
                                                 <Grid Grid.Row="4"
@@ -422,7 +398,7 @@
                                     </Grid.RowDefinitions>
 
                                     <Grid Grid.Row="0"
-                                      Margin="0,10">
+                                          Margin="0,10">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="auto"/>
@@ -430,7 +406,7 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10,13"
+                                                   Margin="10"
                                                    FontSize="15"
                                                    FontWeight="Bold"
                                                    Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
@@ -444,7 +420,7 @@
                                                 </Grid.RowDefinitions>
 
                                                 <Grid Grid.Row="0"
-                                                  Margin="0,10">
+                                                  Margin="0,5">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="auto"/>
@@ -459,14 +435,14 @@
 
                                                     <TextBox Grid.Column="1"
                                                              FontSize="15"
-                                                             Padding="10,0"
+                                                             Padding="10,5"
                                                              MinWidth="100"
                                                              Text="{Binding Path=NewLogin,UpdateSourceTrigger=PropertyChanged}"
                                                              HorizontalContentAlignment="Center"/>
                                                 </Grid>
 
                                                 <Grid Grid.Row="1"
-                                                  Margin="0,10">
+                                                  Margin="0,5">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="auto"/>
@@ -481,24 +457,25 @@
 
                                                     <TextBox Grid.Column="1"
                                                          FontSize="15"
+                                                             Padding="10,5"
                                                          MinWidth="100"
                                                          Text="{Binding Path=NewPassword,UpdateSourceTrigger=PropertyChanged}"
                                                          HorizontalContentAlignment="Center"/>
                                                 </Grid>
 
                                                 <Grid Grid.Row="2"
-                                                  Margin="0,10">
+                                                  Margin="0,5">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="100"/>
                                                     </Grid.ColumnDefinitions>
 
                                                     <TextBlock Grid.Column="0"
-                                                           FontSize="15"
-                                                           Margin="0,0,15,0"
-                                                           VerticalAlignment="Center"
-                                                           HorizontalAlignment="Center"
-                                                           Text="Пол:"/>
+                                                               FontSize="15"
+                                                               Margin="0,0,15,0"
+                                                               VerticalAlignment="Center"
+                                                               HorizontalAlignment="Center"
+                                                               Text="Пол:"/>
 
                                                     <ComboBox Grid.Column="1"
                                                           FontSize="15"
@@ -511,7 +488,7 @@
                                     </Grid>
 
                                     <Grid Grid.Row="1"
-                                      Margin="0,10">
+                                          Margin="0,10">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="auto"/>
@@ -519,7 +496,7 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10,13"
+                                                   Margin="10"
                                                    FontSize="15"
                                                    FontWeight="Bold"
                                                    Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
@@ -530,8 +507,7 @@
                                                     <RowDefinition Height="*"/>
                                                 </Grid.RowDefinitions>
 
-                                                <Grid Grid.Row="0"
-                                                  Margin="0,0">
+                                                <Grid Grid.Row="0">
                                                     <Grid.ColumnDefinitions>
                                                         <ColumnDefinition Width="auto"/>
                                                         <ColumnDefinition Width="auto"/>
@@ -552,7 +528,7 @@
 
                                                     <TextBox Grid.Column="1"
                                                              FontSize="15"
-                                                             Padding="10,0"
+                                                             Padding="10,5"
                                                              IsReadOnly="True"
                                                              Text="{Binding Path=NewMainFolder,UpdateSourceTrigger=PropertyChanged}"
                                                              ToolTip="{Binding Path=NewMainFolderPath}"
@@ -564,7 +540,7 @@
                                     </Grid>
 
                                     <Grid Grid.Row="2"
-                                      Margin="0,10">
+                                          Margin="0,10">
                                         <Grid>
                                             <Grid.ColumnDefinitions>
                                                 <ColumnDefinition Width="auto"/>
@@ -572,7 +548,7 @@
                                             </Grid.ColumnDefinitions>
 
                                             <TextBlock Grid.Column="0"
-                                                   Margin="10,13"
+                                                   Margin="10"
                                                    FontSize="15"
                                                    FontWeight="Bold"
                                                    Foreground="{Binding Path=PageColor,UpdateSourceTrigger=PropertyChanged}"
